# video-service

./: README.md  docker-compose.yaml
video-service/: .gitignore  Cargo.toml  Dockerfile  README.md
video-service/src/: compression.rs  main.rs
web-service/: .env  .gitignore  Cargo.toml  Dockerfile  README.md
web-service/migrations/2019-12-26-175354_web_service/: up.sql
web-service/sql/: init.sql
web-service/src/: api.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
web-service/static/errors/: 400.html  404.html  500.html
web-service/templates/: header.html  index.html  list.html  video.html
