[package]
name = "video-service"
version = "0.1.0"
authors = ["Kravchenko Danylo <kravchel16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3.1"
bytes = "0.5.3"
async-std = "1.3.0"
lz4 = "1.23.1"
brotli = "3.3.0"