[package]
name = "web-service"
version = "0.1.0"
authors = ["Kravchenko Danylo <kravchel16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
futures-util = "0.3"
actix-multipart = "0.2.0-alpha.3"
actix-web = "2.0.0-alpha.3"
actix-rt = "1.0.0-alpha.3"
tokio = { version = "0.2.4", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
bytes = "0.5"