[package]
name = "web-service"
version = "0.1.0"
authors = ["Kravchenko Danylo <kravchel16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
futures-util = "0.3"
actix-multipart = "0.2.0"
actix-web = "2.0.0-rc"
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix = "0.9.0"
tokio = { version = "0.2.4", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
bytes = "0.5"
failure = "0.1.6"
tera = "1.0"
env_logger = "0.7.1"
mysql_async = "0.21.1"
rand = "0.7.2"
chrono = "0.4.10"
serde = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"